- https://github.com/eclipse-syson/syson/issues/670[#670] [diagrams] Ignore keywords order during direct edit of prefixes label of `Definitions` and `Usages` graphical elements.
- https://github.com/eclipse-syson/syson/issues/689[#689] [diagrams] Ensure coherence between Direct Edit capabilities and the displayed label

=== New features

- https://github.com/eclipse-syson/syson/issues/553[#553] [diagrams] Add "Show/Hide Icons in Diagrams" action in Diagram Panel, allowing to show/hide icons in diagrams (icons are not part of the SysMLv2 specification).
- https://github.com/eclipse-syson/syson/issues/585[#585] [diagrams] Add new tools allowing to create an _ExhibitState_ at the root of General View and StateTransition View.
The first one called "New ExhibitState" creates a simple _ExhibitState_.
The second one called "New ExhibitState with referenced State" shows a dialog allowing to select an existing _State_ to associate to the new _ExhibitState_.
The selected _State_ will be added to the diagram, not the new _ExhibitState_.
- https://github.com/eclipse-syson/syson/issues/587[#587] [interconnection-view] Handle _FlowConnectionUsage_ between _PortUsages_ in Interconnection View.
A new edge tool allows to create a flow between two ports.
- https://github.com/eclipse-syson/syson/issues/598[#598] [diagrams] Add tools to set a Feature as composite or reference.
- https://github.com/eclipse-syson/syson/issues/596[#596] [interconnection-view] Handle _ItemUsage_ in Interconnection View and _FlowConnectionUsage_ involving items
- https://github.com/eclipse-syson/syson/issues/615[#615] [details] Add documentation property to Core tab of the Details view.
- https://github.com/eclipse-syson/syson/issues/626[#626] [explorer] Allow to insert textual SysMLv2 from existing model elements.
- https://github.com/eclipse-syson/syson/issues/466[#466] [syson] Handle implicit specializations from standard libraries for Usages/Definitions.